--- a/index.html
+++ b/index.html
@@ -97,14 +97,14 @@
                 <div class="col-6">
                     <form action="/submit_error.php">
                         <p>Are the following errors appearing in the pair of the figure and the caption? </p>
-                         <input type="checkbox" id="No-error" name="error-group" value="No-error">
-                         <label for="No-error">No Error Exists</label>
                         <input type="checkbox" id="Figure-Extraction" name="error-group" value="Figure-Extraction">
-                        <label for="Figure-Extraction">Figure Extraction Errors</label><br>  
+                        <label for="Figure-Extraction">Figure Extraction Errors</label> 
                         <input type="checkbox" id="Caption-Extraction" name="error-group" value="Caption-Extraction">
-                        <label for="Caption-Extraction">Caption Extraction errors</label>
+                        <label for="Caption-Extraction">Caption Extraction errors</label><br> 
                         <input type="checkbox" id="Hard-to-Understand" name="error-group" value="Hard-to-Understand">
                         <label for="Hard-to-Understand">Hard-to-Understand captions</label>
+                      <input type="checkbox" id="No-error" name="error-group" value="No-error">
+                      <label for="No-error">No Error Exists</label>
                       </form>
                       
                     <form action="/quality.php">
@@ -119,7 +119,6 @@
                         <label for="03">Agree a little</label><br>
                         <input type="radio" id="04" name="match-group" value="04">
                         <label for="04">Totally Agree</label><br>
-                        <br>  
                         <p>The caption clearly describes the figure.</p>
                         <input type="radio" id="10" name="clear-group" value="10">
                         <label for="10">Totally disagree</label><br>
