--- a/index.html
+++ b/index.html
@@ -96,12 +96,12 @@
             <div class="row">
                 <div class="col-6">
                     <img class="rounded mx-auto d-block" src="sample/img/1001.2938v1-Figure9-1.png" width="100%">
-                    <p>Here should be a random caption. </p>
+                    <p><strong>Here should be a random caption.</strong> </p>
 
                 </div>
                 <div class="col-6">
                     <form action="/submit_error.php">
-                        <p>Are the following errors appearing in the pair of the figure and the caption? </p>
+                        <p><strong>Are the following errors appearing in the pair of the figure and the caption? </strong> </p>
                         <input type="checkbox" id="Figure-Extraction" name="error-group" value="Figure-Extraction">
                         <label for="Figure-Extraction">Figure Extraction Errors</label> 
                         <input type="checkbox" id="Caption-Extraction" name="error-group" value="Caption-Extraction">
@@ -113,7 +113,7 @@
                       </form>
                       
                     <form action="/quality.php">
-                        <p>The caption matches the figure. </p>
+                        <p><strong>The caption matches the figure. </strong></p>
                         <input type="radio" id="00" name="match-group" value="00">
                         <label for="00"> Totally disagree</label><br>
                         <input type="radio" id="01" name="match-group" value="01">
@@ -124,7 +124,7 @@
                         <label for="03">Agree a little</label><br>
                         <input type="radio" id="04" name="match-group" value="04">
                         <label for="04">Totally Agree</label><br>
-                        <p>The caption clearly describes the figure.</p>
+                        <p><strong>The caption clearly describes the figure.</strong></p>
                         <input type="radio" id="10" name="clear-group" value="10">
                         <label for="10">Totally disagree</label><br>
                         <input type="radio" id="11" name="clear-group" value="11">
