--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
         // var imgSrc = imgArr[index];
         // var imgEle = document.getElementByTagName('img')[0];//获取需要改变的img标签
         // imgEle.setAttribute('src',imgSrc);//设置src属性
-        document.getElementsByTagName("match-group").disabled=true;
-        document.getElementsByTagName("clear-group").disabled=true;
+        document.getElementsByClassName("match-group").disabled=true;
+        document.getElementsByClassName("clear-group").disabled=true;
 
         $(document).ready(function() {
             // Time Lock
@@ -136,7 +136,7 @@
                         <input type="radio" id="13" name="clear-group" value="13">
                         <label for="13">Agree a little</label><br>
                         <input type="radio" id="14" name="clear-group" value="14">
-                        <label for="14">Totally Agree</label><br>
+                        <label for="14">Totally Agree!!!!</label><br>
                       </form>
                       
                 </div>
