--- a/index.html
+++ b/index.html
@@ -36,16 +36,16 @@
         // var imgSrc = imgArr[index];
         // var imgEle = document.getElementByTagName('img')[0];//获取需要改变的img标签
         // imgEle.setAttribute('src',imgSrc);//设置src属性
-        document.getElementsById("00").disabled=true;
-        document.getElementsById("01").disabled=true;
-        document.getElementsById("02").disabled=true;
-        document.getElementsById("03").disabled=true;
-        document.getElementsById("04").disabled=true;
-        document.getElementsById("10").disabled=true;
-        document.getElementsById("11").disabled=true;
-        document.getElementsById("12").disabled=true;
-        document.getElementsById("13").disabled=true;
-        document.getElementsById("14").disabled=true;
+        // document.getElementsById("00").disabled=true;
+        // document.getElementsById("01").disabled=true;
+        // document.getElementsById("02").disabled=true;
+        // document.getElementsById("03").disabled=true;
+        // document.getElementsById("04").disabled=true;
+        // document.getElementsById("10").disabled=true;
+        // document.getElementsById("11").disabled=true;
+        // document.getElementsById("12").disabled=true;
+        // document.getElementsById("13").disabled=true;
+        // document.getElementsByClassName("14").disabled=true;
 
         $(document).ready(function() {
             // Time Lock
@@ -124,26 +124,26 @@
                       
                     <form action="/quality.php">
                         <p><strong>The caption matches the figure. </strong></p>
-                        <input type="radio" id="00" name="match-group" value="00">
+                        <input type="radio" id="00" name="match-group" value="00" disabled=True>
                         <label for="00"> Totally disagree</label><br>
-                        <input type="radio" id="01" name="match-group" value="01">
+                        <input type="radio" id="01" name="match-group" value="01" disabled=True>
                         <label for="01">Disagree a little</label><br>
-                        <input type="radio" id="02" name="match-group" value="02">
+                        <input type="radio" id="02" name="match-group" value="02" disabled=True>
                         <label for="02">Neutral opinion</label><br>
-                        <input type="radio" id="03" name="match-group" value="03">
+                        <input type="radio" id="03" name="match-group" value="03" disabled=True>
                         <label for="03">Agree a little</label><br>
-                        <input type="radio" id="04" name="match-group" value="04">
+                        <input type="radio" id="04" name="match-group" value="04" disabled=True>
                         <label for="04">Totally Agree</label><br>
                         <p><strong>The caption clearly describes the figure.</strong></p>
-                        <input type="radio" id="10" name="clear-group" value="10">
+                        <input type="radio" id="10" name="clear-group" value="10" disabled=True>
                         <label for="10">Totally disagree</label><br>
-                        <input type="radio" id="11" name="clear-group" value="11">
+                        <input type="radio" id="11" name="clear-group" value="11" disabled=True>
                         <label for="11">Disagree a little</label><br>
-                        <input type="radio" id="12" name="clear-group" value="12">
+                        <input type="radio" id="12" name="clear-group" value="12" disabled=True>
                         <label for="12">Neutral opinion</label><br>
-                        <input type="radio" id="13" name="clear-group" value="13">
+                        <input type="radio" id="13" name="clear-group" value="13" disabled=True>
                         <label for="13">Agree a little</label><br>
-                        <input type="radio" id="14" name="clear-group" value="14">
+                        <input type="radio" id="14" name="clear-group" value="14" disabled=True>
                         <label for="14">Totally Agree</label><br>
                       </form>
                       
