--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 
             //If no error is detected 
             $("#caption").change(function() {
-                if (document.getElementsById('No-error')== True) {
+                if (document.getElementsById('No-error').checked) {
                     document.getElementsById("00").disabled=false;
                     document.getElementsByName("clear-group").disabled=false;
                 } else {
@@ -135,7 +135,7 @@
                       
                     <form action="/quality.php">
                         <p><strong>The caption matches the figure. </strong></p>
-                        <input type="radio" id="00" name="match-group" value="00" disabled=True>
+                        <input type="radio" id="00" name="match-group" value="00" disabled=false>
                         <label for="00"> Totally disagree</label><br>
                         <input type="radio" id="01" name="match-group" value="01" disabled=True>
                         <label for="01">Disagree a little</label><br>
