--- a/index.html
+++ b/index.html
@@ -135,8 +135,8 @@
                       
                     <form action="/quality.php">
                         <p><strong>The caption matches the figure. </strong></p>
-                        <input type="radio" id="00" name="match-group" value="00" disabled=false>
-                        <label for="00"> Totally disagree</label><br>
+                        <input type="radio" id="00" name="match-group" value="00" >
+                        <label for="00"> Totally disagree!!!</label><br>
                         <input type="radio" id="01" name="match-group" value="01" disabled=True>
                         <label for="01">Disagree a little</label><br>
                         <input type="radio" id="02" name="match-group" value="02" disabled=True>
