--- a/index.html
+++ b/index.html
@@ -137,16 +137,16 @@
                         <p><strong>The caption matches the figure. </strong></p>
                         <input type="radio" id="00" name="match-group" value="00" >
                         <label for="00"> Totally disagree!!!</label><br>
-                        <input type="radio" id="01" name="match-group" value="01" disabled=True>
+                        <input type="radio" id="01" name="match-group" value="01" >
                         <label for="01">Disagree a little</label><br>
-                        <input type="radio" id="02" name="match-group" value="02" disabled=True>
+                        <input type="radio" id="02" name="match-group" value="02" >
                         <label for="02">Neutral opinion</label><br>
-                        <input type="radio" id="03" name="match-group" value="03" disabled=True>
+                        <input type="radio" id="03" name="match-group" value="03" >
                         <label for="03">Agree a little</label><br>
-                        <input type="radio" id="04" name="match-group" value="04" disabled=True>
+                        <input type="radio" id="04" name="match-group" value="04" >
                         <label for="04">Totally Agree</label><br>
                         <p><strong>The caption clearly describes the figure.</strong></p>
-                        <input type="radio" id="10" name="clear-group" value="10" disabled=True>
+                        <input type="radio" id="10" name="clear-group" value="10" >
                         <label for="10">Totally disagree</label><br>
                         <input type="radio" id="11" name="clear-group" value="11" disabled=True>
                         <label for="11">Disagree a little</label><br>
