--- a/index.html
+++ b/index.html
@@ -61,7 +61,8 @@
             }, 1000);
 
             //If no error is detected 
-            $("#caption").change(function() {
+            $("#No-error").change(function() {
+                if (("#No-error").checked) {
                     $("#00").prop("disabled", false);
                     $("#01").prop("disabled", false);
                     $("#02").prop("disabled", false);
