--- a/index.html
+++ b/index.html
@@ -62,17 +62,7 @@
 
             //If no error is detected 
             $("#No-error").change(function() {
-                $("#00").prop("disabled", false);
-                $("#01").prop("disabled", false);
-                $("#02").prop("disabled", false);
-                $("#03").prop("disabled", false);
-                $("#04").prop("disabled", false);
-                $("#10").prop("disabled", false);
-                $("#11").prop("disabled", false);
-                $("#12").prop("disabled", false);
-                $("#13").prop("disabled", false);
-                $("#14").prop("disabled", false);
-                if (("#No-error").attr("checked")) {
+                if ($("#No-error").attr("checked")) {
                     $("#00").prop("disabled", false);
                     $("#01").prop("disabled", false);
                     $("#02").prop("disabled", false);
@@ -148,7 +138,7 @@
                         <input type="checkbox" id="Hard-to-Understand" name="error-group" value="Hard-to-Understand">
                         <label for="Hard-to-Understand">Hard-to-Understand captions</label>
                       <input type="checkbox" id="No-error" name="error-group" value="No-error">
-                      <label for="No-error">No Error Exists</label><br>
+                      <label for="No-error">No Error Exists!!!</label><br>
                       </form>
                       
                     <form action="/quality.php">
