--- a/index.html
+++ b/index.html
@@ -74,10 +74,10 @@
                     $("#13").prop("disabled", false);
                     $("#14").prop("disabled", false);
                 } else {
-                    $("#00").prop("disabled", true);
-                    $("#01").prop("disabled", true);
-                    $("#02").prop("disabled", true);
-                    $("#03").prop("disabled", true);
+                    $("#00").prop("disabled", false);
+                    $("#01").prop("disabled", false);
+                    $("#02").prop("disabled", false);
+                    $("#03").prop("disabled", false);
                     $("#04").prop("disabled", true);
                     $("#10").prop("disabled", true);
                     $("#11").prop("disabled", true);
@@ -138,7 +138,7 @@
                         <input type="checkbox" id="Hard-to-Understand" name="error-group" value="Hard-to-Understand">
                         <label for="Hard-to-Understand">Hard-to-Understand captions</label>
                       <input type="checkbox" id="No-error" name="error-group" value="No-error">
-                      <label for="No-error">No Error Exists!!!</label><br>
+                      <label for="No-error">No Error Exists</label><br>
                       </form>
                       
                     <form action="/quality.php">
