--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                     $("#13").prop("disabled", false);
                     $("#14").prop("disabled", false);
                 } else {
-                    $("#00").prop("disabled", false);
+                    $("#00").prop("disabled", true);
                     $("#01").prop("disabled", true);
                     $("#02").prop("disabled", true);
                     $("#03").prop("disabled", true);
