--- a/index.html
+++ b/index.html
@@ -78,16 +78,16 @@
                     $("#13").prop("disabled", false);
                     $("#14").prop("disabled", false);
                 } else {
-                    $("#00").prop("disabled", true);
-                    $("#01").prop("disabled", true);
-                    $("#02").prop("disabled", true);
-                    $("#03").prop("disabled", true);
-                    $("#04").prop("disabled", true);
-                    $("#10").prop("disabled", true);
-                    $("#11").prop("disabled", true);
-                    $("#12").prop("disabled", true);
-                    $("#13").prop("disabled", true);
-                    $("#14").prop("disabled", true);
+                    $("#00").prop("disabled", true);$("#00").prop("checked", false);
+                    $("#01").prop("disabled", true);$("#01").prop("checked", false);
+                    $("#02").prop("disabled", true);$("#02").prop("checked", false);
+                    $("#03").prop("disabled", true);$("#03").prop("checked", false);
+                    $("#04").prop("disabled", true);$("#04").prop("checked", false);
+                    $("#10").prop("disabled", true);$("#10").prop("checked", false);
+                    $("#11").prop("disabled", true);$("#11").prop("checked", false);
+                    $("#12").prop("disabled", true);$("#12").prop("checked", false);
+                    $("#13").prop("disabled", true);$("#13").prop("checked", false);
+                    $("#14").prop("disabled", true);$("#14").prop("checked", false);
                 }
             });
             
