--- a/index.html
+++ b/index.html
@@ -31,13 +31,14 @@
 
     <script>
         /* Your own JavaScript code */
-        var imgArr = ['sample/img/1001.2938v1-Figure9-1.png','sample/img/1004.4612v1-Figure6-1.png','sample/img/1102.2936v3-Figure4-1.png'];
-        var index = Math.floor((Math.random()*imgArr.length));
-        var imgSrc = imgArr[index];
-        var imgEle = document.getElementById('test_img')[0];
-        imgEle.setAttribute('src',imgSrc);//设置src属性
 
         $(document).ready(function() {
+            
+            var imgArr = ['sample/img/1001.2938v1-Figure9-1.png','sample/img/1004.4612v1-Figure6-1.png','sample/img/1102.2936v3-Figure4-1.png'];
+            var index = Math.floor((Math.random()*imgArr.length));
+            var imgSrc = imgArr[index];
+            var imgEle = document.getElementById('test_img')[0];
+            imgEle.setAttribute('src',imgSrc);
             // Time Lock
             // (1) init time_left
             var time_left = 5;
