--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             
             // Time Lock
             // (1) init time_left
-            var time_left = 5;
+            var time_left = 30;
             
             // (2) create setInterval function.
             var interval_id = setInterval(function() {
@@ -149,11 +149,31 @@
             <div class="row">
                 <div class="col-6">
                     <script>
-                        var imgArr = ['sample/img/1001.2938v1-Figure9-1.png','sample/img/1004.4612v1-Figure6-1.png','sample/img/1102.2936v3-Figure4-1.png'];
-                        var index = Math.floor((Math.random()*imgArr.length));
-                        document.write("<img class=\"rounded mx-auto d-block\" src= "+imgArr[index]+" width=\"100%\">");
-                        var imgEle = document.getElementById('test_img')[0];
-                        imgEle.setAttribute('src',imgSrc);
+                        var nameArr = ['1001.2938v1-Figure9-1', '1004.4612v1-Figure6-1', '1102.2936v3-Figure4-1', '1109.0351v2-Figure1-1', '1204.1658v1-Figure9-1', 
+                                       '1205.1701v1-Figure2-1', '1209.3126v1-Figure10-1', '1210.4882v1-Figure3-1', '1212.2451v1-Figure4-1', '1212.3177v1-Figure4-1', 
+                                       '1301.6230v1-Figure19-1', '1307.4129v1-Figure6-1', '1307.6512v1-Figure8-1', '1308.2350v1-Figure3-1', '1308.5168v1-Figure8-1', 
+                                       '1309.2677v1-Figure8-1', '1311.3428v1-Figure6-1', '1403.4662v2-Figure4-1', '1405.5096v1-Figure4-1', '1409.3107v2-Figure5-1', 
+                                       '1409.7311v2-Figure1-1', '1412.6376v1-Figure4-1', '1507.07608v1-Figure3-1', '1509.00167v2-Figure13-1', '1509.09130v1-Figure8-1', 
+                                       '1510.05981v1-Figure3-1', '1510.06702v2-Figure2-1', '1601.04967v3-Figure8-1', '1606.08365v1-Figure10-1', '1611.05205v1-Figure2-1', 
+                                       '1701.06506v1-Figure4-1', '1701.08671v1-Figure2-1', '1702.01005v2-Figure8-1', '1704.02718v1-Figure5-1', '1705.07404v4-Figure3.2-1', 
+                                       '1707.05399v2-Figure8-1', '1707.05915v1-Figure8-1', '1711.00674v1-Figure4-1', '1802.01239v2-Figure3-1', '1802.05941v2-Figure2-1', 
+                                       '1804.05881v1-Figure10-1', '1805.02006v1-Figure10-1', '1805.04748v1-Figure7-1', '1805.08662v1-Figure3-1', '1806.05524v1-Figure2-1', 
+                                       '1807.06724v1-Figure6.3-1', '1808.06304v2-Figure2-1', '1808.06463v1-Figure9-1', '1808.07426v3-Figure14-1', '1808.09277v1-Figure2-1', 
+                                       '1809.06332v2-Figure9-1', '1811.00688v2-Figure8-1', '1812.01220v1-Figure5-1', '1902.02528v1-Figure8-1', '1903.00987v3-Figure5-1', 
+                                       '1903.06442v1-Figure9-1', '1904.09352v1-Figure8-1', '1905.11642v1-Figure3-1', '1906.01602v1-Figure3-1', '1906.09490v2-Figure7-1', 
+                                       '1907.05274v1-Figure5-1', '1907.07718v2-Figure7-1', '1908.06968v1-Figure6-1', '1908.08368v1-Figure11-1', '1909.04409v1-Figure7-1', 
+                                       '1910.07557v2-Figure21-1', '1911.00595v2-Figure6-1', '1911.03681v2-Figure6-1', '1911.07316v2-Figure5-1', '1911.10287v1-Figure1-1', 
+                                       '1911.11789v2-Figure12-1', '1912.02077v1-Figure1-1', '1912.07768v1-Figure4-1', '1912.11847v1-Figure3-1', '2001.01022v2-Figure11-1', 
+                                       '2002.06258v1-Figure11-1', '2002.08805v1-Figure1-1', '2003.03033v1-Figure12-1', '2003.09603v1-Figure9-1', '2003.11059v1-Figure4-1', 
+                                       '2004.04827v1-Figure1-1', '2004.07060v1-Figure12-1', '2005.10851v1-Figure5-1', '2005.12894v1-Figure6-1', '2006.10091v1-Figure5-1', 
+                                       '2006.11108v1-Figure7-1', '2006.11374v1-Figure12-1', '2007.02832v1-Figure8-1', '2007.06018v1-Figure1-1', '2007.09293v1-Figure1-1', 
+                                       '2008.04218v1-Figure2-1', '2008.06667v1-Figure2-1', '2009.01027v1-Figure6-1', '2009.06211v1-Figure1-1', '2009.09090v1-Figure9-1', 
+                                       '2009.11713v2-Figure5-1', '2010.05024v1-Figure4-1', '2010.14004v2-Figure15-1', '2011.04556v1-Figure2-1', '2011.09246v1-Figure5-1'];
+                        var index = Math.floor((Math.random()*nameArr.length));
+                        document.write("<img class=\"rounded mx-auto d-block\" src= \"sample/img/"+nameArr[index]+".png\" width=\"100%\">");
+                        // var imgEle = document.getElementById('test_img')[0];
+                        // imgEle.setAttribute('src',imgSrc);
+
                     </script>
                     <!-- <img class="rounded mx-auto d-block" src="sample/img/1001.2938v1-Figure9-1.png" width="100%"> -->
                     <p><strong>Here should be a random caption.</strong> </p>
