--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
                         // imgEle.setAttribute('src',imgSrc);
 
                     </script>
-                    // <img class="rounded mx-auto d-block" src="sample/img/1001.2938v1-Figure9-1.png" width="100%">
+                    <!-- <img class="rounded mx-auto d-block" src="sample/img/1001.2938v1-Figure9-1.png" width="100%"> -->
                     <p><strong>Here should be a random caption.</strong> </p>
 
                 </div>
