--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
 
                     </script>
                     <!-- <img class="rounded mx-auto d-block" src="sample/img/1001.2938v1-Figure9-1.png" width="100%"> -->
-                    <p><strong>Here should be a random caption.</strong> </p>
+                    <!-- <p><strong>Here should be a random caption.</strong> </p> -->
 
                 </div>
                 <div class="col-6">
