--- a/index.html
+++ b/index.html
@@ -171,13 +171,13 @@
                                        '2008.04218v1-Figure2-1', '2008.06667v1-Figure2-1', '2009.01027v1-Figure6-1', '2009.06211v1-Figure1-1', '2009.09090v1-Figure9-1', 
                                        '2009.11713v2-Figure5-1', '2010.05024v1-Figure4-1', '2010.14004v2-Figure15-1', '2011.04556v1-Figure2-1', '2011.09246v1-Figure5-1'];
                         var index = Math.floor((Math.random()*nameArr.length));
-                        document.write("<img class=\"rounded mx-auto d-block\" src= \"sample/img/"+nameArr[index]+".png\" width=\"100%\"><br>");
                         
                         var request = new XMLHttpRequest();
                         request.open("GET","sample/json/"+ameArr[index]+".json", false);
                         request.send(null);
                         var json_object = JSON.parse(request.responseText);
-                        document.write("<br><p><strong>caption</strong> </p>");
+                        document.write("<img class=\"rounded mx-auto d-block\" src= \"sample/img/"+nameArr[index]+".png\" width=\"100%\"><br>");
+                        document.write("<p><strong>caption</strong> </p>");
                         document.write("<p><strong>" +json_object['ori_caption']+"</strong> </p>");
                         // var imgEle = document.getElementById('test_img')[0];
                         // imgEle.setAttribute('src',imgSrc);
