--- a/index.html
+++ b/index.html
@@ -172,10 +172,9 @@
                                        '2009.11713v2-Figure5-1', '2010.05024v1-Figure4-1', '2010.14004v2-Figure15-1', '2011.04556v1-Figure2-1', '2011.09246v1-Figure5-1'];
                         var index = Math.floor((Math.random()*nameArr.length));
                         document.write("<img class=\"rounded mx-auto d-block\" src= \"sample/img/"+nameArr[index]+".png\" width=\"100%\"><br>");
-                        document.write("<p><strong>caption</strong> </p>");
-                        
+                        
                         var request = new XMLHttpRequest();
-                        request.open("GET","sample\/json\/"+ameArr[index]+".json", false);
+                        request.open("GET","sample/json/"+nameArr[index]+".json", false);
                         request.send(null);
                         var json_object = JSON.parse(request.responseText);
                         console.log(request.responseText);
